--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1918</width>
-    <height>1076</height>
+    <width>1922</width>
+    <height>1080</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -81,6 +81,9 @@ color:white;</string>
         <number>0</number>
        </property>
        <item row="0" column="0">
+        <widget class="view" name="viewAP"/>
+       </item>
+       <item row="0" column="2">
         <widget class="QLabel" name="labelAP">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -105,7 +108,7 @@ color:white;</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
+       <item row="0" column="3">
         <widget class="QLabel" name="labelLAT">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -127,8 +130,8 @@ color:white;</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
-        <widget class="view" name="graphicsView"/>
+       <item row="0" column="1">
+        <widget class="view" name="viewLAT"/>
        </item>
       </layout>
      </widget>
@@ -140,7 +143,7 @@ color:white;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1918</width>
+     <width>1922</width>
      <height>22</height>
     </rect>
    </property>
