--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -212,7 +212,7 @@ color:white;</string>
             </font>
            </property>
            <property name="text">
-            <string>Write symptom</string>
+            <string>Erase and write symptom</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -272,7 +272,7 @@ color:white;</string>
             </font>
            </property>
            <property name="text">
-            <string>Write remarks</string>
+            <string>Erase and write remarks</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
